# my_little_rpg

./: .gitignore  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  rust.yml
.space/: devfile.yaml
docker/: Dockerfile
src/: attack_types.rs  command_craft_expand_modifier.rs  command_craft_rerol_modifier.rs  command_craft_reroll_modifier.rs  command_create_new_item.rs  command_equip_swap.rs  command_equip_unequip.rs  command_expand_elements.rs  command_expand_equipment_slots.rs  command_expand_max_element.rs  command_expand_max_simultaneous_element.rs  command_expand_min_element.rs  command_expand_min_simultanius_element.rs  command_expand_modifier.rs  command_expand_places.rs  command_help.rs  command_move.rs  command_reduce_difficulty.rs  command_reorder_inventory.rs  command_save_load.rs  command_state.rs  commands.rs  crafting_materials.rs  difficulty.rs  game.rs  game_generator.rs  game_statistics.rs  hex_encoder.rs  index_specifier.rs  item.rs  item_modifier.rs  item_resource.rs  main.rs  modifier_cost.rs  modifier_gain.rs  my_little_rpg_errors.rs  place.rs  place_generator.rs  roll_modifier.rs  tcp_listener.rs  (+1 more)
src/command/: command_craft_expand_modifier.rs  command_craft_reroll_modifier.rs  command_equip_swap.rs  command_expand_elements.rs  command_expand_equipment_slots.rs  command_expand_max_element.rs  command_expand_max_simultaneous_element.rs  command_expand_min_element.rs  command_expand_min_simultanius_element.rs  command_expand_places.rs  command_move.rs  command_reduce_difficulty.rs  (+23 more)
(+61 files in other folders)
