[package]
name = "my_little_rpg"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5" }
rand_pcg = { version = "0.3.1", features = ["serde1"] }
structopt  = "0.3.26"
